<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">零生活</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="please_input_phone">请填写您的手机号码，不可为空</string>
    <string name="please_input_email">邮箱</string>
    <string name="please_password">密码</string>
    <string name="please_input_caller">请填写邀请人邮箱，可为空</string>
    <string name="please_input_corret_phone">手机号格式不正确，请重新输入</string>
    <string name="error_email">账号不可为空，请重新输入</string>
    <string name="error_pwd">密码不可为空，请重新输入</string>
    <string name="notsame">两次密码输入不一致</string>
    <string name="device_warning">注意：一个月只能更换一次设备！</string>
    <string name="device_input_email">请输入绑定邮箱(登陆账号)</string>
    <string name="device_password">请输入绑定密码(登陆密码)</string>
    <string name="please_input_corret_email">邮箱格式不正确，请重新输入</string>
    <string name="pLease_check_network">目前网络未连接，请检查您的网络设置</string>
    <string name="please_waiting">请稍后...</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_error">提交失败</string>
    <string name="register_failuer">注册失败，请稍后重试</string>
    <string name="server_data_exception">服务器数据异常</string>
    <string name="clearing">正在清除...</string>
    <string name="about_us_content">零生活是北京地区领先的生活服务类型的媒体推介APP平台，目前主要针对昌平区作为试点地区进行推广普及。零生活不仅为客户端用户提供商户的各类信息推介，同时提供餐饮购物休闲娱乐等诸多领域的免费礼品赠送。零生活立志成为移动客户端生活必备工具。</string>
    <string name="about_us_telephone">招商电话：15600005001</string>
    <string name="about_us_qq">QQ客服：2104799867</string>
    <string name="about_us_email">邮箱：zerolife2014@126.com</string>
    <string name="share_app_download_address">http://112.126.72.53:8080/app/pages/htgl/main/index.html</string>
</resources>