<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="@dimen/app_bg_content_margin"
        android:layout_marginRight="@dimen/app_bg_content_margin"
        android:layout_marginTop="30dip"
        android:background="@drawable/rect_white_gray_line"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/device_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="8dip"
            android:hint="@string/device_input_email"
            android:inputType="textEmailAddress"
            android:padding="10dip"
            android:text=""
            android:textSize="@dimen/button_text_siez" />

        <include layout="@layout/horizontal_line" />

        <EditText
            android:id="@+id/device_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="8dip"
            android:ems="10"
            android:hint="@string/device_password"
            android:inputType="textPassword"
            android:padding="10dip"
            android:textSize="@dimen/button_text_siez" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="@dimen/app_bg_content_margin"
        android:layout_marginRight="@dimen/app_bg_content_margin"
        android:layout_marginTop="20dip"
        android:background="@drawable/regist_bg"
        android:onClick="gotoBind"
        android:paddingBottom="8dip"
        android:paddingTop="8dip"
        android:text="绑定"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_siez" />
<RelativeLayout
	    android:layout_width="fill_parent"
   		android:layout_height="fill_parent"
        android:orientation="vertical" 
	    >
	      
	      <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_centerVertical="true"
	        android:layout_centerHorizontal="true"
	         android:paddingBottom="20dip"
	        android:layout_marginLeft="@dimen/app_bg_content_margin"
	        android:layout_marginRight="@dimen/app_bg_content_margin"
	        android:autoLink="web"
	        android:gravity="center_horizontal"
	        android:text="@string/device_warning"
	        android:clickable="true"
	        android:onClick="forgetpwd"
	        android:textColor="#FF0000"
	        android:textSize="14sp" />
	</RelativeLayout>
  

</LinearLayout>